--- a/css/font.css
+++ b/css/font.css
@@ -124,3 +124,9 @@
   font-weight: 400;
   font-style: normal;
 }
+
+.great-vibes-regular {
+  font-family: "Great Vibes", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
