--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@
        .hero {
            height: 110vh;
            background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4)),
-               url('../gallery/gallery7.jpg');
+               url('../image/hero-background.jpg');
            background-size: cover;
            background-position: center;
            display: flex;
@@ -401,12 +401,12 @@
 
        .heart {
            position: absolute;
-           top: 3em;
+           top: 1em;
            left: 0;
            right: 0;
            z-index: 99;
-
-
+           font-size: 18px;
+           font-weight: 700;
 
        }
 
@@ -416,14 +416,6 @@
            height: 150px;
            margin: 0 auto 10px;
            border-radius: 50%;
-
-
-
-           img {
-               width: 150px;
-               height: 150px;
-               border-radius: 50%;
-           }
        }
 
        .groom {
@@ -440,30 +432,58 @@
 
        }
 
+       .text-please {
+           height: 200px;
+           text-align: center;
+           background: linear-gradient(rgba(0 0 0 / 7%), rgba(0, 0, 0, 0.3)),
+               url('../image/please-img.jpg');
+           background-size: cover;
+           background-position: center;
+           background-attachment: fixed;
+
+       }
+
+       .text-please p {
+           position: relative;
+           top: 40%;
+           left: 50%;
+           transform: translate(-50%, -50%);
+           color: white;
+           font-size: 24px;
+           font-weight: 300;
+           text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
+       }
+
        .desc-groom {
            text-align: center;
-
-
            padding-right: 180px;
-           text-align: right;
 
        }
 
        .desc-bride {
            text-align: center;
-
-
            padding-left: 180px;
-           text-align: left;
 
        }
 
        .desc img {
-           height: 550px;
+
+           border-radius: 20px;
+
+           margin: 0 auto;
            border-radius: 20px;
            position: relative;
-           margin: 0 auto;
+           width: 100%;
+           height: 550px;
+           margin-left: 50px;
+           object-fit: cover;
+           display: block;
 
+       }
+
+       .desc {
+
+           margin-top: 70px;
        }
 
        .desc .text {
@@ -660,7 +680,7 @@
            border-radius: 1000px;
            /*  background: var(--brown); */
            padding: 8px;
-           margin-bottom: 30px;
+           margin-bottom: 20px;
        }
 
        .wedding_events_photo img {
@@ -677,12 +697,13 @@
 
 
        .wedding_events_title {
-           font-family: 'Itim';
+
            margin-top: 0px;
            margin-bottom: 20px;
            text-align: center;
            font-size: 35px;
-           line-height: 40px;
+           font-weight: 400;
+           line-height: 45px;
            /*   color: #3d1f24; */
        }
 
@@ -696,9 +717,9 @@
 
        .wedding_events_info h3 {
            font-family: 'Kanit', sans-serif;
-           font-size: 18px;
+           font-size: 20px;
            line-height: 24px;
-           font-weight: 200;
+           font-weight: 300;
            /*  color: #704f55; */
        }
 
@@ -796,12 +817,12 @@
        }
 
        .org-logo {
-           width: 140px;
-           height: 140px;
+           width: 300px;
+           height: 300px;
            object-fit: cover;
            margin-bottom: 25px;
            border-radius: 50%;
-           border: 3px solid #f8d7a4;
+           border: 3px solid var(--btn);
            padding: 5px;
            background: white;
            transition: transform 0.3s ease;
@@ -813,14 +834,14 @@
 
        .org-name {
            font-size: 1.4rem;
-           color: white;
+           color:black;
            margin-bottom: 15px;
            font-weight: 500;
            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
        }
 
        .org-role {
-           color: #f8d7a4;
+           color: black;
            font-style: italic;
            font-size: 1.1rem;
        }
@@ -1087,7 +1108,7 @@
        .rsvp {
            background-color: rgba(150, 148, 140, 0.25);
            text-align: center;
-           height: 1200px;
+           height: 100%;
            position: relative;
        }
 
@@ -1165,136 +1186,6 @@
            }
        }
 
-       .form-container {
-           font-family: 'Kanit', sans-serif;
-           color: var(--text-color);
-           background-color: #ffffff;
-           margin: 0;
-           padding: 20px;
-           display: flex;
-           justify-content: center;
-
-       }
-
-       .ff-title {
-           text-align: center;
-           font-size: 20px;
-           font-weight: 500;
-           margin-bottom: 30px;
-       }
-
-       .ff-item {
-           margin-bottom: 20px;
-       }
-
-       .ff-item-qs {
-           display: block;
-           margin-bottom: 8px;
-           font-weight: 500;
-       }
-
-       .ff-required {
-           color: #d93025;
-       }
-
-       .ff-widget-control {
-           width: 100%;
-           padding: 12px;
-           border: 1px solid var(--border-color);
-           border-radius: 4px;
-           font-family: 'Kanit', sans-serif;
-           font-size: 16px;
-       }
-
-       .ff-check-table {
-           display: flex;
-           flex-wrap: wrap;
-           gap: 15px;
-       }
-
-       input[type=radio] {
-           accent-color: var(--primary-color);
-       }
-
-
-       option {
-           color: var(--primary-color);
-       }
-
-       .ff-form-check {
-           flex: 1;
-           min-width: 200px;
-       }
-
-       .ff-form-check-input {
-           margin-right: 8px;
-       }
-
-       .ff-button-bar {
-           display: flex;
-           justify-content: center;
-           margin-top: 30px;
-       }
-
-       .ff-submit {
-           background-color: var(--primary-color);
-           color: var(--white);
-           border: none;
-           padding: 12px 24px;
-           border-radius: 30px;
-           font-family: 'Kanit', sans-serif;
-           font-size: 16px;
-           font-weight: 500;
-           cursor: pointer;
-           display: flex;
-           align-items: center;
-           gap: 8px;
-           transition: background-color 0.3s;
-       }
-
-       .ff-submit:hover {
-           background-color: transparent;
-           color: var(--primary-color);
-       }
-
-       .ff-submit-outline {
-           background-color: transparent;
-           border: 2px solid var(--white);
-           margin-left: 15px;
-       }
-
-       .ff-submit-outline:hover {
-           background-color: var(--white);
-           color: var(--dark);
-       }
-
-       #success-message {
-           display: none;
-           color: var(--white);
-           text-align: center;
-           padding: 20px;
-           background-color: var(--primary-color);
-           border-radius: 8px;
-           margin-top: 30px;
-       }
-
-       .submit-btn {
-           background-color: var(--accent);
-           color: var(--white);
-           border: none;
-           padding: 15px 40px;
-           font-size: 1rem;
-           font-weight: 500;
-           border-radius: 30px;
-           cursor: pointer;
-           transition: background-color 0.3s ease;
-           margin-top: 20px;
-       }
-
-       .submit-btn:hover {
-           background-color: var(--secondary);
-       }
-
        /* location Section */
        .location {
            /*    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
@@ -1307,6 +1198,27 @@
            padding: 100px 0;
            position: relative;
        }
+
+       .location img{
+
+            /* กำหนดความกว้าง */
+            width: 100%;
+
+            /* กำหนดความสูง */
+            overflow: hidden;
+            /* ตัดส่วนเกินที่เลยออกจากกรอบ */
+ 
+            object-fit: cover;
+            /* ให้รูปครอบเต็มกรอบและตัดส่วนเกิน */
+            object-position: center;
+            border-radius: 20px;
+            /* จัดตำแหน่งให้แสดงตรงกลาง */
+            /*  border-radius: 40% 40% 50% 40%/30% 50% 50% 50%; */
+            position: relative;
+            margin-bottom: 20px;
+ 
+        }
+
 
        .location::before {
            content: '';
@@ -1382,13 +1294,20 @@
                flex-direction: column;
            }
 
-           .countdown-container{
-            margin: 0;
+           .countdown-container {
+               margin: 0;
            }
-           .countdown img{
+
+           .countdown img {
+
+               margin: auto;
+           }
+
+           .desc img {
 
             margin: auto;
-           }
+        }
+
            .rsvp {
                height: 100%;
            }
@@ -1397,6 +1316,12 @@
            .rsvp h3 {
                margin: 40px;
                color: var(--black);
+           }
+
+           .desc-groom,
+           .desc-bride {
+               padding: 0;
+
            }
 
            .about-image {
