--- a/css/style.css
+++ b/css/style.css
@@ -1266,6 +1266,7 @@
            position: relative;
            overflow: hidden;
            height: 250px;
+           margin-bottom: 40px;
        }
 
        .location-carousel img {
