--- a/css/style.css
+++ b/css/style.css
@@ -401,13 +401,10 @@
 
 
        .heart {
-           position: absolute;
-           top: 1em;
-           left: 0;
-           right: 0;
            z-index: 99;
            font-size: 25px;
            font-weight: 700;
+           margin: 20px 0px 40px 0;
 
        }
 
@@ -458,13 +455,13 @@
 
        .desc-groom {
            text-align: center;
-           padding-right: 180px;
+           padding-right: 100px;
 
        }
 
        .desc-bride {
            text-align: center;
-           padding-left: 180px;
+           padding-left: 100px;
 
        }
 
@@ -1432,8 +1429,8 @@
            }
 
            .line::before {
-               width: 20%;
-               left: -20px;
+               width: 15%;
+               left: -15px;
            }
 
            .date::before {
@@ -1442,8 +1439,8 @@
            }
 
            .line::after {
-               width: 20%;
-               right: -20px;
+               width: 15%;
+               right: -15px;
            }
 
            .date::after {
@@ -1491,9 +1488,9 @@
                font-size: 2rem;
            }
 
-           .section {
-               padding: 70px 0;
-           }
+           /* .section {
+               padding: 70px;
+           } */
 
            .bi-heart-fill {
                display: none;
@@ -1502,8 +1499,23 @@
            .desc img {
                width: 100%;
                height: 100%;
-               padding-top: 20px;
+               margin-top: 20px;
            }
+
+           .desc .thai {
+            font-size:  21px;
+           }
+
+           .text-please {
+            height: 400px;
+            text-align: center;
+            background: linear-gradient(rgba(0 0 0 / 7%), rgba(0, 0, 0, 0.3)),
+                url('../image/please-img.jpg');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+ 
+            }
 
            .countdown {
                background-attachment: scroll;
@@ -1521,11 +1533,16 @@
            .countdown img {
                width: 100%;
                height: 100%;
-               padding-top: 20px;
+               margin-top: 20px;
            }
 
            .hotel {
                background-attachment: scroll;
+           }
+
+           .org-logo{
+            width: 250px;
+            height: 250px;
            }
 
            .rsvp {
