--- a/css/style.css
+++ b/css/style.css
@@ -401,13 +401,11 @@
 
 
        .heart {
-           position: absolute;
-           top: 1em;
-           left: 0;
-           right: 0;
+
            z-index: 99;
            font-size: 25px;
            font-weight: 700;
+           margin: 20px 0px 40px 0;
 
        }
 
@@ -441,8 +439,6 @@
            background-size: cover;
            background-position: center;
            background-attachment: fixed;
-           width: 100%;
-
        }
 
        .text-please p {
@@ -459,13 +455,13 @@
 
        .desc-groom {
            text-align: center;
-           padding-right: 180px;
+           padding-right: 100px;
 
        }
 
        .desc-bride {
            text-align: center;
-           padding-left: 180px;
+           padding-left: 100px;
 
        }
 
@@ -1220,29 +1216,29 @@
            /* จัดตำแหน่งให้แสดงตรงกลาง */
            /*  border-radius: 40% 40% 50% 40%/30% 50% 50% 50%; */
            position: relative;
-           margin-bottom: 20px;
+
 
        }
 
-        .map-image-link {
-            display: inline-block;
-            border-radius: 12px;
-            overflow: hidden;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-        
-        .map-image-link:hover {
-            transform: scale(1.03);
-            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
-        }
-        
-        .map-thumbnail {
-            display: block;
-            width: 100%;
-            height: auto;
-        }
-      
+       .map-image-link {
+           display: inline-block;
+           border-radius: 12px;
+           overflow: hidden;
+           box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+           transition: transform 0.3s ease, box-shadow 0.3s ease;
+       }
+
+       .map-image-link:hover {
+           transform: scale(1.03);
+           box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
+       }
+
+       .map-thumbnail {
+           display: block;
+           width: 100%;
+           height: auto;
+       }
+
 
        .location-item {
            position: relative;
@@ -1434,8 +1430,8 @@
            }
 
            .line::before {
-               width: 20%;
-               left: -20px;
+               width: 15%;
+               left: -15px;
            }
 
            .date::before {
@@ -1443,14 +1439,14 @@
                left: -20px;
            }
 
-           .org-logo{
-            width: 250px;
-            height: 250px;
+           .org-logo {
+               width: 250px;
+               height: 250px;
            }
 
            .line::after {
-               width: 20%;
-               right: -20px;
+               width: 15%;
+               right: -15px;
            }
 
            .date::after {
@@ -1498,19 +1494,49 @@
                font-size: 2rem;
            }
 
-           .section {
+           /*            .section {
                padding: 70px 0;
            }
-
-           .heart {
+ */
+           /* .heart {
                display: none;
-           }
+           } */
 
            .desc img {
                width: 100%;
                height: 100%;
-               padding-top: 20px;
+               margin-top: 20px;
            }
+
+           .desc .thai {
+               font-size: 21px;
+           }
+
+           .desc .eng {
+               font-size: 17px;
+           }
+
+           /*  .text-please {
+            height: 400px;
+            text-align: center;
+            background: linear-gradient(rgba(0 0 0 / 7%), rgba(0, 0, 0, 0.3)),
+                url('../image/please-img.jpg');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+
+            }
+ */
+
+           .text-please {
+               height: 500px;
+           }
+
+           .text-please p {
+               top: 40%;
+           }
+
+
 
            .countdown {
                background-attachment: scroll;
@@ -1528,7 +1554,7 @@
            .countdown img {
                width: 100%;
                height: 100%;
-               padding-top: 20px;
+               margin-top: 20px;
            }
 
            .hotel {
@@ -1539,8 +1565,12 @@
                height: 100%;
            }
 
-           .rsvp-form{
-            height: 800px;
+           .rsvp img {
+               height: 100%;
+           }
+
+           .rsvp-form {
+               height: 800px;
            }
 
            .rsvp p {
@@ -1550,7 +1580,7 @@
                margin: 0px 10px 40px 10px
            }
 
-      
+
            .location {
                background-attachment: scroll;
            }
