--- a/css/style.css
+++ b/css/style.css
@@ -723,6 +723,13 @@
        }
 
        /* สไตล์พื้นหลัง */
+
+       #hotel {
+        height: 800px;
+        overflow-y: auto;
+        padding-bottom: 50px;
+      }
+
        .hotel {
            background-color: rgba(150, 148, 140, 0.25);
            /*  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
@@ -742,9 +749,7 @@
            position: absolute;
            top: 0;
            left: 0;
-           width: 100%;
-           height: 100%;
-           /*  background: rgba(0, 0, 0, 0.5); */
+
            z-index: 0;
        }
 
@@ -1104,6 +1109,11 @@
        }
 
        /* RSVP Section */
+
+       #rsvp {
+           scroll-margin-top: 200px;
+           /* ปรับตามขนาด navbar หรือ padding */
+       }
 
        .rsvp {
 
@@ -1477,7 +1487,7 @@
            }
 
            .nav-links a {
-               color: var(--dark);
+               color: var(--dark) !important;
                font-size: 1.2rem;
            }
 
@@ -1534,12 +1544,6 @@
 
            .text-please p {
                top: 40%;
-           }
-
-
-
-           .countdown {
-               background-attachment: scroll;
            }
 
            .countdown-box {
