--- a/css/style.css
+++ b/css/style.css
@@ -737,17 +737,16 @@
        }
 
        /* Overlay สีเพื่อความอ่านง่าย */
-       .hotel::before {
+       /*  .hotel::before {
            content: '';
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
-           /*  background: rgba(0, 0, 0, 0.5); */
-           z-index: 0;
-       }
 
+           z-index: 0;
+       }  */
 
 
        /* .section-title {
