--- a/css/style.css
+++ b/css/style.css
@@ -1449,11 +1449,11 @@ iframe {
     }
 
     .countdown {
-        height: 130vh;
+        height: 1300px;
     }
 
     .theme {
-        height: 90vh;
+        height: 900px;
     }
 
     .couple {
@@ -1470,7 +1470,7 @@ iframe {
 
 
     .hero {
-        height: 100vh;
+        height: 1000px;
     }
 
 
