--- a/css/style.css
+++ b/css/style.css
@@ -70,9 +70,10 @@ h4 {
 }
 
 .navbar.scrolled {
-    background-color: rgba(53, 61, 45, 0.7);
+    /* background-color: rgba(53, 61, 45, 0.7);
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    padding: 15px 40px;
+    padding: 15px 40px; */
+    display: none;;
 
 }
 
