--- a/css/style.css
+++ b/css/style.css
@@ -446,8 +446,8 @@ h4 {
 
     position: relative;
     top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  /*   left: 50%;
+    transform: translate(-50%, -50%); */
     color: white;
     font-size: 30px;
     font-weight: 300;
