--- a/css/style.css
+++ b/css/style.css
@@ -1358,17 +1358,19 @@ iframe {
 }
 
 .footer-logo {
-    font-family: "Julius Sans One", sans-serif;
+    font-family: "Great vibes", sans-serif;
     font-size: 2rem;
     margin-bottom: 20px;
 
 }
 
 .social-links {
+
     display: flex;
     justify-content: center;
     list-style: none;
     margin: 30px 0;
+    padding: 0;
 }
 
 .social-links li {
